--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+aenum==2.1.2
 asn1crypto==0.24.0
+astor==0.7.1
 base58==1.0.0
 certifi==2018.8.24
 cffi==1.11.5
 chardet==3.0.4
 click==6.7
+colorama==0.3.9
+coz-bytecode==0.5.1
 cryptography==2.3.1
 ecdsa==0.13
 Flask==1.0.2
@@ -13,9 +17,12 @@ GitPython==2.1.11
 idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
+logzero==1.5.0
 MarkupSafe==1.0
 ontology-dapp-box==0.0.1
-ontology-python-sdk==0.1.3
+ontology-python-sdk==0.1.5
+punica==0.0.5
+punica-neo-boa==0.4.8
 pycparser==2.18
 pycryptodomex==3.6.6
 requests==2.19.1
