--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,29 @@
+aiohttp==3.5.4
+asn1crypto==0.24.0
+async-timeout==3.0.1
+attrs==19.1.0
+base58==1.0.3
+certifi==2019.3.9
+cffi==1.12.3
+chardet==3.0.4
+Click==7.0
+cryptography==2.7
+ecdsa==0.13.2
 Flask==1.0.3
 Flask-JSGlue==0.3.1
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+mnemonic==0.18
+multidict==4.5.2
 ontology-python-sdk==2.0.2
+pbkdf2==1.3
+pycparser==2.19
+pycryptodomex==3.8.2
+requests==2.22.0
+six==1.12.0
+urllib3==1.25.3
+websockets==7.0
+Werkzeug==0.15.4
+yarl==1.3.0
